# Cpp-Belt

Brown/1_week/HashSet/: a.out
Red/final/first_part/Solution/: CMakeCache.txt  CMakeLists.txt  Makefile  ]  cmake_install.cmake  main
Red/final/first_part/Solution/.cache/clangd/index/: iterator_range.h.FB3EDDFBD3BCB060.idx  main.cpp.593B38D86F49D8F7.idx  parse.cpp.F679EC1B82753F2A.idx  parse.h.DDC688A99F62A736.idx  profile.h.F63AC63216C9C55C.idx  search_server.cpp.44C362B3704F45CA.idx  search_server.h.89844A471DF1D44D.idx  test_runner.h.F8E740A33505FBEC.idx
Red/final/first_part/Solution/cmake_build_Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  main
Yellow/final/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  test1  test2  test4  test5  test7  test_runner.cpp  test_runner.h
Yellow/final/.cache/clangd/index/: condition_parser.cpp.94F2773002F8EAF9.idx  condition_parser.h.DDB602A99D7CB3F0.idx  condition_parser_test.cpp.14146444AF41B7F1.idx  database.cpp.FBDA0DD9DB309C13.idx  database.h.D022D9EF7EACC71A.idx  date.cpp.5B0F0FA9314FDDB2.idx  date.h.A4DEAA2EAA4F0A67.idx  main.cpp.4CC7613C01A7A525.idx  node.cpp.204502795A1B76D2.idx  node.h.0926566388977C48.idx  test_db.h.29D1F5650AC2C71F.idx  test_runner.h.793A35D1AF9E6728.idx  token.cpp.9154441FC6613234.idx  token.h.9A7708057D74E8EA.idx  unit_tests.cpp.883CC99755EE65AF.idx
Yellow/final/cmake_build_Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  main
Yellow/test_framework/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
(+130 files in other folders)
